adding some credits

--- a/sass/screen21.scss
+++ b/sass/screen21.scss
@@ -216,8 +216,7 @@ button, .button {
    		LOADER
 ************************* */
 
-
-
+/* This code is adapted from Stix at CodePen: https://codepen.io/stix/pen/yeGKrp */
 #loader-container {
   width: 200px;
   height: 200px;
